# 3DBP_Anthropic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Doxygen.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
docs/: mainpage.md
include/bp3d/: bp3d.hpp  config.hpp  logger.hpp  result.hpp  rotation.hpp  solver.hpp  types.hpp
include/bp3d/algorithms/: bfd.hpp  extreme_point.hpp  ffd.hpp  guillotine.hpp  parallel_solver.hpp  shelf.hpp
include/bp3d/constraints/: collision.hpp  stacking.hpp  validator.hpp  weight.hpp
include/bp3d/io/: json_serializer.hpp  obj_exporter.hpp
src/: CMakeLists.txt  logger.cpp
src/algorithms/: bfd.cpp  extreme_point.cpp  ffd.cpp  guillotine.cpp  parallel_solver.cpp  shelf.cpp
src/constraints/: collision.cpp  stacking.cpp  validator.cpp  weight.cpp
src/internal/: free_space.cpp  free_space.hpp  geometry.cpp  geometry.hpp  placement_engine.cpp  placement_engine.hpp  sorting.hpp  spatial_grid.cpp  spatial_grid.hpp
src/io/: json_serializer.cpp  obj_exporter.cpp
tests/: CMakeLists.txt  test_algorithms.cpp  test_constraints.cpp  test_json.cpp  test_rotation.cpp  test_support.hpp  test_types.cpp
tests/fixtures/: complex.json  simple.json  small_items.json
tests/integration/: test_io_integration.cpp  test_solver_integration.cpp
tests/system/: test_system.cpp
tests/unit/: test_edge_cases.cpp  test_free_space.cpp  test_geometry.cpp  test_obj_export.cpp  test_sorting.cpp  test_spatial_grid.cpp
